--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h1>Welcome to Star Social!</h1>
-    <h2>The best community for all things on outer space!</h2>
+    <h1>Welcome to AI-BLUE-BOOK!</h1>
+    <h2>A Good to Go Community to Connects With Professionals!</h2>
     <h2>Login or Sign-up for free to get started!</h2>
 
 
